# tracer

./: .gitignore  Cargo.toml
src/: camera.rs  hit.rs  lib.rs  main.rs  material.rs  math.rs  ray.rs  sphere.rs  trace.rs  viewer.rs
src/hit/: mod.rs  sphere.rs
