[package]
name = "tracer"
version = "0.1.0"
authors = ["Victor Moneratto <victor.moneratto@gmail.com>"]
edition = "2018"

[[bin]]
name = "offline"
path = "src/bin/offline.rs"

[[bin]]
name = "realtime"
path = "src/bin/realtime.rs"

[dependencies]
glam = "*"
rayon = "*"
image = "*"
rand = "*"
glium = "*"
shaderc = "*"